--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -122,6 +122,7 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
+deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -246,6 +247,7 @@ deny 173.237.206.68;
 deny 173.249.57.253;
 deny 173.255.198.243;
 deny 176.118.193.33;
+deny 176.121.81.51;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.58.124.159;
@@ -965,7 +967,6 @@ deny 204.8.96.88;
 deny 204.8.96.89;
 deny 205.185.113.180;
 deny 205.185.113.8;
-deny 205.185.116.215;
 deny 205.185.116.34;
 deny 205.185.117.149;
 deny 205.185.119.35;
@@ -1005,6 +1006,7 @@ deny 23.133.204.10;
 deny 23.137.248.100;
 deny 23.137.248.192;
 deny 23.137.250.83;
+deny 23.137.253.108;
 deny 23.137.253.109;
 deny 23.137.253.254;
 deny 23.137.253.27;
@@ -1036,7 +1038,6 @@ deny 23.154.177.30;
 deny 23.154.177.31;
 deny 23.154.177.7;
 deny 23.154.177.8;
-deny 23.154.177.9;
 deny 23.155.8.104;
 deny 23.184.48.13;
 deny 23.184.48.254;
@@ -1090,6 +1091,7 @@ deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
 deny 2602:fc24:19:1c9::1;
+deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fef9:100:1100::199;
@@ -1613,6 +1615,7 @@ deny 2a0c:e300::23;
 deny 2a0d:2787:1b:d19::a;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1627,6 +1630,7 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1739,6 +1743,7 @@ deny 2a12:a800:2:1:45:80:158:69;
 deny 2a13:d207:0:461::1;
 deny 31.129.22.65;
 deny 31.133.0.210;
+deny 31.184.236.104;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1765,6 +1770,7 @@ deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.99.10;
+deny 45.137.99.14;
 deny 45.137.99.216;
 deny 45.138.16.107;
 deny 45.138.16.113;
