--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -138,7 +138,6 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -189,6 +188,7 @@ allow 156.229.232.115;
 allow 156.229.232.54;
 allow 156.229.232.98;
 allow 156.229.233.92;
+allow 157.180.42.50;
 allow 157.230.17.193;
 allow 158.220.123.219;
 allow 158.247.192.179;
@@ -694,6 +694,7 @@ allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.32.162.96;
 allow 193.36.132.21;
+allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -724,7 +725,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.144.178.185;
 allow 198.144.178.187;
-allow 198.167.206.152;
+allow 198.167.206.228;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -857,7 +858,6 @@ allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:3514::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -976,6 +976,7 @@ allow 205.185.121.170;
 allow 205.185.121.177;
 allow 205.185.123.93;
 allow 205.185.124.176;
+allow 205.185.127.231;
 allow 207.148.70.72;
 allow 208.85.16.102;
 allow 209.135.168.90;
@@ -986,6 +987,7 @@ allow 209.141.37.94;
 allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.54.203;
 allow 209.141.54.218;
 allow 209.141.55.26;
@@ -1015,10 +1017,12 @@ allow 23.137.254.137;
 allow 23.151.8.8;
 allow 23.153.248.33;
 allow 23.153.248.34;
+allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
+allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -1108,6 +1112,7 @@ allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
 allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
+allow 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 allow 2605:6400:20:482:3920:1829:1839:1293;
 allow 2605:6400:20:be7::1;
@@ -1282,6 +1287,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1296,6 +1302,7 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4f9:2b:75d::124:148;
+allow 2a01:4f9:c010:dc45::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1617,6 +1624,7 @@ allow 2a0c:e300::23;
 allow 2a0d:2787:1b:d19::a;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1654,6 +1662,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
+allow 2a0f:85c1:356:5bdd::beef;
 allow 2a0f:ca80:1337::47f8:fb5;
 allow 2a0f:ca80:1337::5071:cafb;
 allow 2a0f:ca80:1337::64fa:7d6b;
@@ -1770,6 +1779,7 @@ allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
+allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1899,6 +1909,7 @@ allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.125.196;
 allow 5.255.127.222;
+allow 5.255.97.196;
 allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
@@ -1927,6 +1938,7 @@ allow 64.176.39.158;
 allow 64.190.76.2;
 allow 64.190.76.3;
 allow 64.190.76.4;
+allow 65.87.7.22;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
@@ -1978,6 +1990,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 88.151.117.146;
 allow 88.80.20.86;
 allow 88.80.26.2;
